--- a/postgresql.conf
+++ b/postgresql.conf
@@ -1,7 +1,11 @@
+# RAM 120GB
+# 40 CPUS
+# NVME IO
+
 listen_addresses = '*'		# what IP address(es) to listen on;
-max_connections = 1000			# (change requires restart)
+max_connections = 500			# (change requires restart)
 shared_buffers = 30GB			# min 128kB
-work_mem = 410MB			# min 64kB
+work_mem = 2GB 				# min 64kB
 maintenance_work_mem = 6GB		# min 1MB
 dynamic_shared_memory_type = posix	# the default is the first option
 effective_io_concurrency = 200		# 1-1000; 0 disables prefetching
@@ -11,7 +15,7 @@ max_parallel_workers_per_gather = 20	# taken from max_parallel_workers
 max_parallel_workers = 40		# maximum number of max_worker_processes that
 max_parallel_maintenance_workers = 4
 wal_buffers = -1			# min 32kB, -1 sets based on shared_buffers
-max_wal_size = 3GB
+max_wal_size = 4GB
 min_wal_size = 2GB
 checkpoint_completion_target = 0.9	# checkpoint target duration, 0.0 - 1.0
 random_page_cost = 1.1			# same scale as above
@@ -39,3 +43,14 @@ row_security = off
 
 max_locks_per_transaction = 256		# min 10
 
+temp_buffers = 256MB
+fsync = on
+ssl = off
+synchronous_commit = off
+#checkpoint_segments = 128
+from_collapse_limit= 20
+join_collapse_limit = 20
+geqo = on
+geqo_threshold = 12
+standard_conforming_strings = off
+escape_string_warning = off
