--- a/postgresql.conf
+++ b/postgresql.conf
@@ -14,11 +14,15 @@ max_worker_processes = 40		# (change requires restart)
 max_parallel_workers_per_gather = 20	# taken from max_parallel_workers
 max_parallel_workers = 40		# maximum number of max_worker_processes that
 max_parallel_maintenance_workers = 4
+#min_parallel_relation_size = 0
+parallel_tuple_cost = 0.05
+parallel_setup_cost = 1000
 wal_buffers = -1			# min 32kB, -1 sets based on shared_buffers
 max_wal_size = 4GB
 min_wal_size = 2GB
 checkpoint_completion_target = 0.9	# checkpoint target duration, 0.0 - 1.0
 random_page_cost = 1.1			# same scale as above
+seq_page_cost = 1.1
 effective_cache_size = 90GB
 log_timezone = 'Europe/Moscow'
 statement_timeout = 0			# in milliseconds, 0 is disabled
@@ -37,7 +41,7 @@ bgwriter_lru_maxpages = 400		# max buffers written/round, 0 disables
 bgwriter_lru_multiplier = 4.0		# 0-10.0 multiplier on buffers scanned/round
 
 autovacuum = on			# Enable autovacuum subprocess?  'on'
-autovacuum_max_workers = 4		# max number of autovacuum subprocesses
+autovacuum_max_workers = 10		# max number of autovacuum subprocesses
 autovacuum_naptime = 20s		# time between autovacuum runs
 row_security = off
 
@@ -54,3 +58,6 @@ geqo = on
 geqo_threshold = 12
 standard_conforming_strings = off
 escape_string_warning = off
+
+enable_partitionwise_aggregate = on
+enable_partitionwise_join = on
